statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysqldb
  replicas: 1

  selector:
    matchLabels:
      app: app-database

  template:
    metadata:
      labels:
        app: app-database

    spec:
      containers:
        - name: dbcont
          image: venusama/k8s:dbimage

          ports:
            - containerPort: 80
              name: mysql

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          volumeMounts:
            - name: mypvc
              mountPath: /usr/share/nginx/html/

  volumeClaimTemplates:
    - metadata:
        name: mypvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp2
        resources:
          requests:
            storage: 2Gi
