db-svc.yml
---
apiVersion: v1 
kind: Service 
metadata: 
  name: mysqldb
spec: 
  clusterIP: None
  selector: 
    app: app-database
  ports: 
    - port: 3306
      targetPort: 3306
